# mouse-share

./: Cargo.toml  README.md  README.zh-CN.md  REVIEW.md
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
benches/: log_buffer_bench.rs
doc/: 01-udp-network-programming.md  02-serde-bincode-serialization.md  03-macos-core-graphics-input.md  04-windows-input-hooks.md  05-crossbeam-channel-threading.md  06-screen-edge-detection.md  07-cross-platform-abstraction.md  08-clipboard-sync.md  09-bugfix-log.md  10-cursor-visibility.md  11-performance-optimizations.md  12-deadlock-and-jitter-fixes.md  13-ui-log-system.md  14-mouse-event-refactor.md  15-entry-position-fix.md
docs/: performance.md
scripts/: build-app.sh
src/: clipboard.rs  config.rs  lib.rs  log_buffer.rs  main.rs  protocol.rs  screen.rs
src/input/: capture.rs  macos_capture.rs  macos_simulate.rs  mod.rs  simulate.rs  win_capture.rs  win_simulate.rs
src/net/: client.rs  mod.rs  server.rs  state.rs
