[package]
name = "mouse-share"
version = "0.1.0"
edition = "2021"
description = "Share mouse across computers on the same WiFi network"

[features]
default = []
# Build the GUI binary. Kept optional so the CLI stays lean (eframe + winit
# pull in a lot of deps we don't need for the headless `mouse-share` command).
ui = ["dep:eframe"]

[[bin]]
name = "mouse-share"
path = "src/main.rs"

[[bin]]
name = "mouse-share-ui"
path = "src/bin/ui.rs"
required-features = ["ui"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
crossbeam-channel = "0.5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
socket2 = "0.5"
tokio = { version = "1", default-features = false, features = ["sync"] }
arboard = "3"
eframe = { version = "0.29", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "log_buffer_bench"
harness = false

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
